// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render ToggleButton component correctly 1`] = `
<React.Fragment>
  <button
    onClick={[Function]}
  >
    More
  </button>
</React.Fragment>
`;

exports[`it should render inside test with Less 1`] = `
<React.Fragment>
  <button
    onClick={[Function]}
  >
    Less
  </button>
</React.Fragment>
`;

exports[`it should render inside test with More 1`] = `
<React.Fragment>
  <button
    onClick={[Function]}
  >
    More
  </button>
</React.Fragment>
`;
